<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".ProductEditorActivity">


        <EditText
            android:id="@+id/edit_book_title"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_title"
            android:inputType="textCapWords" />


        <EditText
            android:id="@+id/edit_book_author"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_author"
            android:inputType="textCapWords" />


        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_price"
            android:inputType="textCapWords" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Decrement Button -->
            <Button
                android:id="@+id/decrement_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/btn_padding"
                android:text="-" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="textCapWords" />

            <!-- Increment Button -->
            <Button
                android:id="@+id/increment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/btn_padding"
                android:text="+" />

        </LinearLayout>


        <EditText
            android:id="@+id/edit_book_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_supplier_name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edit_book_supplier_phonenumber"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier_phonenumber"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="4dp"
                android:drawableTop="@drawable/ic_call"
                android:text="@string/call_btn_text" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>